packages/yew-functional-macro/tests/function_attr/extern-fail.stderr
error: extern functions can't be function components
  --> $DIR/extern-fail.rs:10:1
   |
10 | extern "C" fn comp(props: &Props) -> Html {
   | ^^^^^^^^^^
